[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rackpulse"
version = "0.1.0"
description = "Multi-rack power and infrastructure monitoring"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pysnmp>=7.0.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
rackpulse = "rackpulse.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rackpulse*"]
